tests/baselines/reference/recursiveIntersectionTypes.errors.txt
tests/cases/conformance/types/intersection/recursiveIntersectionTypes.ts(19,1): error TS2322: Type 'Entity & { next: Entity & any; }' is not assignable to type 'Product & { next: Product & any; }'.
  Type 'Entity & { next: Entity & any; }' is not assignable to type 'Product'.
    Type '{ next: Entity & any; }' is not assignable to type 'Product'.
      Property 'price' is missing in type '{ next: Entity & any; }'.


==== tests/cases/conformance/types/intersection/recursiveIntersectionTypes.ts (1 errors) ====
    type LinkedList<T> = T & { next: LinkedList<T> };
    
    interface Entity {
        name: string;
    }
    
    interface Product extends Entity {
        price: number;
    }
    
    var entityList: LinkedList<Entity>;
    var s = entityList.name;
    var s = entityList.next.name;
    var s = entityList.next.next.name;
    var s = entityList.next.next.next.name;
    
    var productList: LinkedList<Product>;
    entityList = productList;
    productList = entityList;  // Error
    ~~~~~~~~~~~
!!! error TS2322: Type 'Entity & { next: Entity & any; }' is not assignable to type 'Product & { next: Product & any; }'.
!!! error TS2322:   Type 'Entity & { next: Entity & any; }' is not assignable to type 'Product'.
!!! error TS2322:     Type '{ next: Entity & any; }' is not assignable to type 'Product'.
!!! error TS2322:       Property 'price' is missing in type '{ next: Entity & any; }'.
    